# N_Body

./: CMakeLists.txt  CMakeListsQt4.txt  all.sh  collision.txt  nbody.txt  random.txt
include/: Config.h  Logger.h  PTime.h  SimGUIAdapter.h  Simulation.h
include/gui/: BodyVisualization.h  SimulationGUI.h  nbody.ui
src/: Body.h  Config.cpp  Praktikum4.cpp  Simulation.cpp
src/gui/: SimulationGUI.cpp
